--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="price_hint">Price(number only)</string>
     <string name="description_hint">Description</string>
     <string name="save_menu_text">Save</string>
+    <string name="card_image_desc">card image</string>
 </resources>
