--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="save_menu_text">Save</string>
     <string name="card_image_desc">card image</string>
     <string name="new_trave_deal_option_text">New Trave Deal</string>
+    <string name="logout_text">Logout</string>
 </resources>
