--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="card_image_desc">card image</string>
     <string name="new_trave_deal_option_text">New Trave Deal</string>
     <string name="logout_text">Logout</string>
+    <string name="upload_image_text">UPLOAD IMAGE</string>
 </resources>
